Introduced a class for tokenizing text, which will eventually become commands.